# s2doc

./: .gitignore  LICENCE.md  README.md  pyproject.toml
s2doc/: __init__.py  base.py  document.py  drawer.py  element.py  geometry.py  group.py  page.py  pageLayout.py  references.py  revision.py  semantics.py  space.py
src/s2doc/: __init__.py  config.py  document.py  drawer.py  element.py  errors.py  font.py  geometry.py  geometry_tags.py  group.py  normalizedObject.py  page.py  references.py  revision.py  semantics.py  space.py  table.py  util.py  util_table.py
tests/: test_document.py  test_document_snippet_blank_image.py  test_drawer.py  test_element.py  test_geometry.py  test_geometry_serialization.py  test_page.py  test_page_space_guard.py  test_semantics.py
