[project]
name = "s2doc"
version = "0.1.0"
description = "A standardized spatial-semantic document representation format for processing pipelines."
readme = "README.md"
authors = [
    {name = "Sebastian Kempf", email = "sebastian.kempf@uni-wuerzburg.de" },
]
requires-python = ">=3.13"
dependencies = [
    "pillow",
    "shapely",
    "numpy",
    "owlready2",
]

keywords = ["document processing", "semantic annotation", "layout analysis", "spatial modeling", "document representation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: General",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"